[gd_scene load_steps=8 format=3 uid="uid://br8tk5k1ybn6"]

[ext_resource type="Texture2D" uid="uid://chyeoxosk06rt" path="res://assets/enemies/flooper-projectile.png" id="1_p32sf"]
[ext_resource type="Script" path="res://scripts/flooper_bullet.gd" id="1_vju7h"]

[sub_resource type="Animation" id="Animation_3pcl3"]
resource_name = "spawn"
length = 0.45
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_cfu16"]
resource_name = "float"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 6]
}

[sub_resource type="Animation" id="Animation_5p8lp"]
resource_name = "pop"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i8tia"]
_data = {
"float": SubResource("Animation_cfu16"),
"pop": SubResource("Animation_5p8lp"),
"spawn": SubResource("Animation_3pcl3")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_jkkeu"]
radius = 7.0

[node name="FlooperBullet" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_vju7h")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_p32sf")
hframes = 9
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i8tia")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_jkkeu")

[node name="PopTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="PopTimer" to="." method="_on_pop_timer_timeout"]
